--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,8 @@ pydantic = "^2.11.3"
 pydantic-settings = "^2.9.1"
 pydantic-extra-types = "^2.10.3"
 uvicorn = "^0.34.2"
-
-[tool.poetry.extras]
-pycountry = ["pycountry"]
+pycountry = "^24.6.1"
+email-validator = "^2.2.0"
 
 [build-system]
 requires = ["poetry-core"]
